tests/machine/x/pl/substring_builtin.out
ERROR: /workspace/mochi/tests/machine/x/pl/substring_builtin.pl:4:12: Syntax error: Operator expected

